# rust_embedded_wio_bottom_up

./: README.md
00_image/: diagram.drawio
old/pj_01/: Cargo.toml  memory.x
old/pj_03/src/: main.rs
old/pj_04/src/: main.rs
old/pj_05/: Cargo.toml
pj_00/: Cargo.toml
pj_00/src/: main.rs
pj_00_blank/: Cargo.toml
pj_00_empty/: Cargo.toml
pj_01/src/: build.rs  main.rs
pj_01_gpio_by_register/src/: main.rs
pj_01_led_register/: Cargo.toml
pj_01_led_register/src/: main.rs
pj_02/: Cargo.toml
pj_02/src/: main.rs
pj_02_gpio_by_pac/: Cargo.toml
pj_02_gpio_by_pac/src/: main.rs
pj_03/: Cargo.toml
pj_03_gpio_by_hal/: Cargo.toml
pj_03_gpio_by_hal/src/: main.rs
pj_04_gpio_by_bsp/: Cargo.toml
pj_04_gpio_by_bsp/src/: main.rs
pj_05/src/: main.rs
pj_05_blink_by_processor_access/: memory.x
pj_05_blink_processor_access/: Cargo.toml
pj_05_blink_processor_access/src/: main.rs
pj_06_blink_by_bsp/: Cargo.toml
pj_06_blink_by_bsp/src/: main.rs
